# playground

./: .gitignore  LICENSE  README.md
android_sample_bin/: Android.mk  README.md  main.cpp
android_sample_jar/: Android.mk  README.md  app_main.cpp  dk_test_jar
android_sample_jar/src/com/test/: TestApp.java
clang_test/: main.cpp  test
cpp_learning/ticpp/: CMakeLists.txt
cpp_learning/ticpp/test/: CMakeLists.txt
cpp_learning/ticpp/test/ch1/: CMakeLists.txt  newline_test.cpp  palindrome_test.cpp  reverse_test.cpp
cpp_learning/ticpp/test/ch2/: CMakeLists.txt  copyright_test.cpp  fakefstream.cpp  fakefstream.hpp  grep_test.cpp  invoke_editor_test.cpp  toupper_test.cpp
cpp_learning/ticpp/test/ch4/: CMakeLists.txt  ch4ex12.cpp  ch4ex13.cpp  ch4ex15.cpp  ch4ex16.cpp  ex1.cpp  ex10.cpp  ex11.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
cpp_locale/: CMakeLists.txt  main.cpp
cpp_tests/: CMakeLists.txt
cpp_tests/src/: CMakeLists.txt
cpp_tests/tests/: CMakeLists.txt  connection.cpp  thread.cpp
egl_x11/: CMakeLists.txt  demo.cpp  drawable.hpp  drawablefactory.cpp  drawablefactory.hpp  eglwrapper.cpp  eglwrapper.hpp  main.cpp  program.cpp  program.hpp  quaddrawable.cpp  quaddrawable.hpp  quadprogram.cpp  quadprogram.hpp  quadtexture.cpp  quadtexture.hpp  triangleprogram.cpp  triangleprogram.hpp
gcc_parser/: .gitignore  CMakeLists.txt  main.cpp  parser.cpp  parser.hpp
gcc_parser/tests/: CMakeLists.txt  parser_test.cpp
gtest_test/: CMakeLists.txt  download_gtest.sh
gtest_test/tests/: CMakeLists.txt  testgtest2.cpp
kernel_module/: hello.c  hello.mod.c
qt_makefile_project/: Makefile  main.cpp  qt_makefile_project  qt_makefile_project.config
small_app/: README.md  compile  main.c
